--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e56726">
+	<link rel="apple-touch-icon" sizes="180x180" href="_media/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="_media/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="_media/favicon-16x16.png">
+	<link rel="manifest" href="_media/site.webmanifest">
+	<link rel="mask-icon" href="_media/safari-pinned-tab.svg" color="#e56726">
 	<meta name="msapplication-TileColor" content="#e56726">
 	<meta name="theme-color" content="#e56726">
 
@@ -37,13 +37,15 @@
   <meta property="og:image" content="https://noswings.github.io/wiki/_media/logo_256.png" />
   <meta property="og:description" content="NosWings is a MMORPG project made by a team of enthusiasts">
   <meta property="og:site_name" content="NosWings" />
-
+<!-- Theme: Simple Dark -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
 </head>
 
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
+	  search: 'auto', // default
       name: 'NosWings',
       repo: 'https://github.com/NosWings/wiki',
       coverpage: true,
@@ -51,9 +53,8 @@
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/emoji.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-csharp.min.js"></script>
-  <script src="//unpkg.com/docsify-copy-code"></script>
   <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 </body>
