--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <meta name="twitter:creator" content="NosWings">
   <meta name="twitter:description" content="NosWings is a MMORPG project made by a team of enthusiasts">
   <meta name="twitter:creator" content="@NosWings">
-  <meta name="twitter:image" content="https://noswings.github.io/wiki/_media/logo_256.png" />
+  <meta name="twitter:image" content="_media/logo.png" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="NosWings" />
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://noswings.github.io/wiki/" />
-  <meta property="og:image" content="https://noswings.github.io/wiki/_media/logo_256.png" />
+  <meta property="og:image" content="_media/logo.png" />
   <meta property="og:description" content="NosWings is a MMORPG project made by a team of enthusiasts">
   <meta property="og:site_name" content="NosWings" />
 <!-- Theme: Simple Dark -->
